--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,18 @@
 body{
     color: white;
     background-color: black;
+
 }
 
+.ball{
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    background-color: lightpink;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin: 0 auto;
+}
