--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body{
     border-radius: 50%;
     width: 100px;
     height: 100px;
+    font-size: 22px;
+    font-weight: bold;
     background-color: lightpink;
 
     display: flex;
