--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,19 @@ body{
     margin: 0 auto;
     transition: 1s;
 }
+
+.ball2{
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    font-size: 22px;
+    font-weight: bold;
+    background-color: lightskyblue;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin: 0 auto;
+    margin-top: 50px;
+}
