--- a/css/style.css
+++ b/css/style.css
@@ -10,23 +10,6 @@ body{
     height: 100px;
     font-size: 22px;
     font-weight: bold;
-    background-color: lightpink;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    margin: 0 auto;
-    transition: 1s;
-}
-
-.ball2{
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    font-size: 22px;
-    font-weight: bold;
-    background-color: lightskyblue;
 
     display: flex;
     justify-content: center;
@@ -34,4 +17,22 @@ body{
     cursor: pointer;
     margin: 0 auto;
     margin-top: 50px;
+    transition: 1s;
+}
+
+.ball1{
+    background-color: lightpink;
+}
+
+.ball2{
+    background-color: lightskyblue;
+}
+
+.ball3{
+    background-color: lightsalmon;
+}
+
+.ball4{
+    color: grey;
+    background-color: lightyellow;
 }
